# hpc-cluster

./: README.md  hpc-cluster.cabal  stack.yaml  wangcluster.cabal
app/: AddMachines.hs  BuildClient.hs  BuildMaster.hs  CreateUser.hs  GetQuota.hs
app/client/: Main.hs
app/master/: Main.hs
app/provision/: Main.hs
recipe/: machines.txt  wangcluster_config.yaml
scripts/: nas_post.sh  nvidia-device-files  nvidia-device-files.service  nvidia.sh  ohpc.sh
src/: Builders.hs  Files.hs  Types.hs  Utilities.hs
src/Actions/: Client.hs  Master.hs  Packages.hs
