name:                hpc-cluster
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wangcluster#readme
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           2018-2020 (c) Kai Zhang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:
  scripts/nas_post.sh
  scripts/ohpc.sh
  scripts/nvidia.sh
  scripts/nvidia-device-files
  scripts/nvidia-device-files.service

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
    Types
    Actions.Master
    Actions.Client
    Files
    Builders
    Utilities
  build-depends:
      base
    , binary
    , aeson
    , data-default
    , SciFlow >= 0.6.2
    , shelly
    , mtl
    , lens
    , text
    , bytestring
    , file-embed
  default-language:    Haskell2010

executable createUser
  hs-source-dirs:      app
  main-is:             CreateUser.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , shelly
    , text
    , optparse-applicative
    , prettyprinter
    , random
 default-language:    Haskell2010

executable buildClient
  hs-source-dirs:      app
  main-is:             BuildClient.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Paths_hpc_cluster
  build-depends:
      base
    , SciFlow
    , SciFlow-app
    , shelly
    , lens
    , text
    , bytestring
    , hpc-cluster
    , cereal-text
 default-language:    Haskell2010

executable buildMaster
  hs-source-dirs:      app
  main-is:             BuildMaster.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Paths_hpc_cluster
  build-depends:
      base
    , SciFlow
    , SciFlow-app
    , shelly
    , lens
    , text
    , bytestring
    , hpc-cluster
  default-language:    Haskell2010

executable addMachines
  hs-source-dirs:      app
  main-is:             AddMachines.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , shelly
    , text
    , optparse-applicative
    , hpc-cluster
  default-language:    Haskell2010

executable getQuota
  hs-source-dirs:      app
  main-is:             GetQuota.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , shelly
    , text
    , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wangcluster
