name:                wangcluster
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wangcluster#readme
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           2018 (c) Kai Zhang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:
  scripts/nas_post.sh
  scripts/ohpc.sh
  scripts/nvidia.sh
  scripts/nvidia-device-files
  scripts/nvidia-device-files.service

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
    Types
    Actions.Master
    Actions.Client
    Files
    Builders
    Utilities
  build-depends:
      base
    , aeson
    , data-default
    , SciFlow >= 0.6.2
    , shelly
    , mtl
    , lens
    , text
    , bytestring
    , file-embed
  default-language:    Haskell2010

executable createUser
  hs-source-dirs:      app
  main-is:             CreateUser.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , shelly
    , text
    , optparse-applicative
    , random
 default-language:    Haskell2010

executable build_client
  hs-source-dirs:      app/client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , SciFlow
    , shelly
    , lens
    , text
    , bytestring
    , wangcluster
    , cereal-text
 default-language:    Haskell2010

executable build_master
  hs-source-dirs:      app/master
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , SciFlow
    , shelly
    , lens
    , text
    , bytestring
    , wangcluster
  default-language:    Haskell2010

executable wwsh_provision
  hs-source-dirs:      app/provision
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , shelly
    , text
    , wangcluster
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wangcluster
